<resources>
    <string name="app_name">test</string>
    <string name="text_label_1">Журнал</string>
    <string name="text_label_2">Статьи</string>
    <string name="text_label_3">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">КНИГА СТИЛЯ</string>
    <string name="text_polli">ПОЛЛИ РЫЖОВОЙ</string>

    <string name="data_title">17/09/2022</string>
    <string name="title_text">КРАСОТА ВОЛОС</string>
    <string name="discriptiontitle1">Ты смотришься в зеркало, и в твоём образе нет никаких изъянов.
    Всё идеально. Одним словом, «голливудская» дива, которая готова пройтись по красной дорожке за долгожданной наградой. В твоих глазах читается уверенность и стойкость. И вот он – твой «момент славы». Софиты, вспышки камер, музыка…
    Но где же аплодисменты, восторженные взгляды и комплименты? Увы, твоя прическа не была готова к этому событию: хорошо, что это всего лишь кошмарный сон. Не позволь ему стать реальностью! А стилист бренда Прелесть Professional
        Ксения Асанова поделится лайфхаками для стойкой укладки.</string>
    <string name="discriptiontitle2">Не спеши сразу хватать плойку и крутить локоны. Сначала нужно как следует подготовить волосы и кожу головы.
        Правильное очищение – первый шаг к стойкой укладке и здоровому блеску волос. Кожа головы довольно требовательна: нуждается в комплексном витаминном подходе,
        избирательно относится к составу средств и заслуживает только бережного отношения. Именно поэтому стоит отдавать предпочтение натуральным компонентам в уходе: например, шампуни для волос Прелесть PRO «Интенсивное питание» содержат: комплекс витаминов, натуральные ингредиенты, различные масла. Такой состав полезных веществ поможет не только попрощаться с секущимися кончиками,
        но и придаст здоровый вид и глянцевый эффект волосам.
    Здесь собран чек-лист важных советов, как сделать процесс создания стойкой прически простым и безопасным для волос.
1.	Тщательно высуши волосы феном перед созданием прически. Не трать своё время на испарение влаги плойкой. При сушке приподнимай феном пряди волос у корней: так ты придашь прядям дополнительный объём.
2.	Щипцы или бигуди помогут самым непослушным локонам оставаться стойкими в любых обстоятельствах. Важно учитывать тот факт, что, чем тяжелее волосы, тем меньше должен быть диаметр и тоньше пряди.
3.	Представьте, что вы загораете на пляже у моря… Чтобы не было ожогов вы, безусловно, заботитесь о своей коже и наносите солнцезащитный крем с SPF. Волосы тоже нуждаются в термозащите! Не забываем: максимальная безопасная температура при укладке – 180 градусов.
4.	На финальном этапе следует обдуть волосы холодным воздухом фена. Так твои локоны быстрее остынут и зафиксируются в нужном положении.
</string>
    <string name="title_model">МОДА ОСЕНЬ/ЗИМА 2022</string>
    <string name="data_model">21/10/2022</string>
    <string name="model_discription">В прошлом году Лизи Херребург и Рашеми Боттер покинули дом моды Nina Ricci после трех с половиной лет работы. Это прощание стало для многих полной неожиданностью. Но несмотря на почетную должность, которую они занимали во французской компании, дизайнерский дуэт решил сосредоточить все силы на собственном бренде Botter.
        Лизи и Рашеми придерживаются практики апсайклинга и делают особенные вещи из материалов, которые другие сочли бы мусором.
        Сегодня они показали свою коллекцию Botter Spring/Summer 2023 Ready-to-Wear на Неделе моды в Париже, в которой, как и в предыдущих сезонах, продолжили исследовать тему океана.</string>
    <string name="model_discription2">В коллекции дизайнеры использовали голубой цвет, а также необычные аксессуары, такие как перчатки с перепонками, как у земноводных, кроссовки на дутой платформе и сумки изо льда с замороженными ластами и пластиковыми пакетами. Кроме того, Лизи и Рашеми натянули на руки моделей презервативы, наполненные окрашенной водой. «Мы размышляли о том, как мы можем сотрудничать с природой, а не с другим модным брендом.
        Это то, что мы пытались исследовать все глубже и глубже с каждым сезоном», — сказал Botter.
    Помимо морского оттенка в коллекции Botter Spring/Summer 2023 Ready-to-Wear также доминировали черные, коричневые и кремовые тона.
        Что касается самой одежды, то в следующем весенне-летнем сезоне дизайнеры предлагают носить джинсовые рубашки и брюки с масками, полностью закрывающими лицо, кардиганы, которые выглядят как топы с рукавами, обернутыми вокруг шеи, деконструированные жакеты и тренчи,
        строгие костюмы с оригинальными вырезами на груди, а также облегающие платья с подводными мотивами, созданные из специального материала из водорослей.</string>

    <string name="more">Подробнее</string>
</resources>