<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 android:padding="10dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="390dp"
        android:layout_height="230dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/photo1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="391dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="5dp"
        android:fontFamily="serif"
        android:text="@string/title_text"
        android:textColor="#222222"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <TextView
            android:id="@+id/dataTitle"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingTop="7dp"
            android:text="@string/data_title"
            android:textColor="#222222"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:gravity="right"
            android:paddingTop="7dp"
            android:text="@string/more"
            android:textColor="@color/icon_botton_color"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>