<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ReadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="408dp"
        android:layout_height="63dp"
        android:layout_marginEnd="1dp"
        android:background="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/navigationbefore"
            android:layout_width="27dp"
            android:layout_height="29dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="20dp"

            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/title_activity"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_activity"
            android:layout_width="217dp"
            android:layout_height="51dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="418dp"
        android:layout_height="657dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="402dp"
            android:layout_height="657dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="10dp"
                android:text="@string/discriptiontitle1"
                android:textAlignment="viewStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="358dp"
                android:layout_height="216dp"
                android:layout_marginLeft="29dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="358dp"
                    android:layout_height="216dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/photo1" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descriptiont"
                android:layout_width="wrap_content"
                android:layout_height="544dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="10dp"
                android:text="@string/discriptiontitle2"
                android:textAlignment="viewStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="365dp"
                android:layout_height="37dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="57dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/folover"
                    android:layout_width="98dp"
                    android:layout_height="33dp"
                    android:paddingLeft="30dp"
                    android:src="@drawable/favorite" />

                <ImageView
                    android:id="@+id/message"
                    android:layout_width="88dp"
                    android:layout_height="37dp"
                    android:paddingRight="22dp"
                    android:src="@drawable/ic_sms" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>